--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ categories = ["no-std", "development-tools::debugging"]
 description= "This crate provides declarative macros to help you implement the `Debug` trait manually."
 readme = "README.md"
 license = "MIT"
-include = ["src/**/*", "Cargo.toml"]
+include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
 
 [badges.travis-ci]
 repository = "magiclen/debug-helper"
