--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "debug-helper"
 version = "0.3.13"
 authors = ["Magic Len <len@magiclen.org>"]
 edition = "2021"
+rust-version = "1.56"
 repository = "https://github.com/magiclen/debug-helper"
 homepage = "https://magiclen.org/debug-helper"
 keywords = ["debug", "macro", "declarative", "format", "trait"]
